# assistant

./: README.md  pyproject.toml
assistant/: main.py
