[tool.poetry]
name = "assistant"
version = "0.1.0"
description = ""
authors = ["Luca Selinski <lucaselinski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.14"
langchain-openai = "^0.2.14"
langgraph = "^0.2.61"
duckduckgo-search = "^7.2.1"
langchain-community = "^0.3.14"
langchain-experimental = "^0.3.4"
langchain-ollama = "^0.2.2"
pypdf = "^5.1.0"

[tool.poetry.scripts]
assistant = "assistant.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
